--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "5.4.*",
         "tymon/jwt-auth": "^0.5.9",
         "dingo/api": "1.0.x@dev",
-        "barryvdh/laravel-cors": "^0.8.2"
+        "barryvdh/laravel-cors": "^0.8.2",
+        "jacquestvanzuydam/laravel-firebird": "dev-5.4-support"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
